fixed overflow issue

--- a/tagus/client/src/scenes/App/components/Panel/panel.css
+++ b/tagus/client/src/scenes/App/components/Panel/panel.css
@@ -35,5 +35,6 @@
     padding-top: 15px;
     padding-bottom: 15px;
     height: 100%;
+    overflow: auto;
 }
 
